--- a/.env
+++ b/.env
@@ -8,5 +8,5 @@ ENV="dev"
 DEBUG=true
 AUTO_MIGRATE_DB=true
 
-localStoragePath="/home/petterson/sdk/go/tmp"
-GOOGLE_APPLICATION_CREDENTIALS="/home/petterson/sdk/go/src/project-enconder/bucket-credential.json"
+localStoragePath="/tmp"
+GOOGLE_APPLICATION_CREDENTIALS="/go/src/bucket-credential.json"
