--- a/.env
+++ b/.env
@@ -9,4 +9,7 @@ DEBUG=true
 AUTO_MIGRATE_DB=true
 
 localStoragePath="/tmp"
+inputBucketName="encodetest"
+outputBucketName="encodetest"
+CONCURRENCY_UPLOAD=50
 GOOGLE_APPLICATION_CREDENTIALS="/go/src/bucket-credential.json"
